--- a/style.css
+++ b/style.css
@@ -29,8 +29,7 @@ html {
  
 .wrapper {
     max-width: 1920px;
-    height: auto;
-     height:5387px; 
+      height:5500px;  
     margin: 0 auto;
     position: relative;     
     background-image: url(images/background.jpg);
@@ -39,7 +38,7 @@ html {
     background-repeat: no-repeat;
 }
 .container {
-    max-width: 1532px;
+    max-width: 1200px;
     margin: 0 auto;    
 }
 
@@ -116,7 +115,7 @@ h3 {
     flex-wrap: wrap;  
 }
 .scientific-discoveries__item {
-    width: 710px;
+    width: 50%;
     position: relative;
     margin-bottom: 80px;
 }
@@ -142,7 +141,7 @@ h3 {
 }
 
 .scientific-discoveries__proven-inner {
-    width: 1020px;
+    width: 715px;
     padding: 20px 65px;
     position: relative;
     border: 1px solid #636869;
@@ -197,6 +196,7 @@ h3 {
 }
 
 .mars__info {
+    margin-left: 200px;
     position: absolute;
     width: 712px;
     z-index: 5;
@@ -215,27 +215,29 @@ h3 {
     width: 200px;
 }
 .bitcoin__inner {
-   width: 1120px;
+   width: 700px;
    height: 100%;
-   padding: 100px 260px 190px;
+   padding: 180px 160px 190px 60px;
 }
 .actions h1 {
     margin-bottom: 50px;
 }
 .actions {
     margin-bottom: 75px;
+    width: 450px;
+    margin-left: 20px;
 }
 footer {
     position: relative;
     padding-bottom: 115px;
 }
 .decor-border {
-    width: 1360px;
+    width: 1160px;
     height: 270px;
     border: 1px solid #636869;
     position: absolute;
     top: 0;
-    left: 130px;
+    left: 20px;
 }
 .qr-code {
     display: inline-block;
@@ -248,6 +250,7 @@ footer {
 .decor-border__info {
     position: absolute;
     display: block;
-    margin-top: 110px;
+    margin-top: 50px;
     display: flex;
+    margin-left: 60px;
 }
