--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ html {
  
 .wrapper {
     max-width: 1920px;
-    height:5500px;  
+    /* height:6000px;   */
     margin: 0 auto;
     position: relative;     
     background-image: url(images/background.jpg);
@@ -231,28 +231,40 @@ h3 {
     margin-left: 20px;
 }
 footer {
-    position: relative;
     padding-bottom: 115px;
 }
 .decor-border {
     width: 90%;
     height: 270px;
+    margin-left: 20px;
     border: 1px solid #636869;
-    position: absolute;
-    top: 0;
-    left: 20px;
-}
+    padding-top: 60px;
+    position: relative;
+    
+  }
 .qr-code {
+    position: absolute;
+     left: 20px;
+     top: 175;
     display: inline-block;
-    width: 270px;
-    height: 270px;
+    width: 200px;
+    height: 200px;
     border: 1px solid #00d6d9;
     background-color: black;
     margin-right: 110px;
 }
-.decor-border__info {
-    position: absolute;
-    margin-top: 50px;
-    display: flex;
-    margin-left: 60px;
+.decor-border__info {     
+    margin-left: 260px;
+}
+.form {
+    margin-top: 60px;
+    margin-left: 200px;
+    
+}
+iframe {
+    height: 700px;
+    width: 570px;
+    margin-left: 470px;
+    margin-top: 30px;
+
 }
