--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ html {
   }
  
 .wrapper {
-    max-width: 1920px;
+    max-width: 1520px;
     /* height:6000px;   */
     margin: 0 auto;
     position: relative;     
@@ -211,11 +211,12 @@ h3 {
     height: 730px;
     display: flex;
     justify-content: flex-end;
-    margin-bottom: 400px;  
+    margin-bottom: 200px; 
+    padding-top: 100px; 
 }
 .bitcoin h1{
     margin-bottom: 55px;
-    width: 200px;
+    width: 100px;
 }
 .bitcoin__inner {
    width: 50%;
@@ -226,9 +227,16 @@ h3 {
     margin-bottom: 50px;
 }
 .actions {
+  
     margin-bottom: 75px;
+}
+.actions__inner {
+    
+    display: flex;
+    justify-content: space-between;
+}
+.actions p{
     width: 450px;
-    margin-left: 20px;
 }
 footer {
     padding-bottom: 115px;
@@ -245,7 +253,7 @@ footer {
 .qr-code {
     position: absolute;
      left: 20px;
-     top: 175;
+     top: 150px;
     display: inline-block;
     width: 200px;
     height: 200px;
@@ -264,7 +272,6 @@ footer {
 iframe {
     height: 700px;
     width: 570px;
-    margin-left: 470px;
     margin-top: 30px;
 
 }
