--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ html {
  
 .wrapper {
     max-width: 1520px;
+    height: auto;
     /* height:6000px;   */
     margin: 0 auto;
     position: relative;     
@@ -247,10 +248,10 @@ footer {
 }
 .decor-border {
     width: 90%;
-    height: 270px;
+    /* height: 270px; */
     margin-left: 20px;
     border: 1px solid #636869;
-    padding-top: 20px;
+    padding: 20px 20px 100px;
     position: relative;
     
   }
@@ -276,17 +277,17 @@ footer {
 }
 #popup {    
         visibility: hidden;
-        height: 700px;
-        width: 570px;
-        border-width: 0;
+        height: 630px;
+        width: 570px;        
         position: fixed;
         top:0;
         left: 30%;
         z-index: 10;
+        
     }
 
  iframe {    
-    height: 700px;
+    height: 630px;
     width: 570px;    
     border-width: 0;
 } 
@@ -365,7 +366,8 @@ footer {
 }
 
 @media(max-width: 870px) {
-    .ilon__inner {
+    .ilon__inner,
+    .bitcoin {
         margin-bottom: 160px;
     }
     .scientific-discoveries__item {
@@ -392,9 +394,7 @@ footer {
         height: 60px;
         padding-top: 16px;
     }
-    .bitcoin {
-        margin-bottom: 290px;
-    }
+    
     ul {
         padding: 30px 20px;
     }
@@ -431,6 +431,7 @@ footer {
     }
     .mars__info p {
         width: 100%;
+        padding-right: 10px;
     }
     .bitcoin {
         margin-bottom: 265px;
@@ -456,7 +457,7 @@ footer {
         position: absolute;
         top: 70px;
         background-color: #102023;
-        height: 100%;
+        height: 750px;
     }
     ul li {
         padding: 10px;
@@ -531,15 +532,16 @@ footer {
     }
     header > h1, p {
         margin: 0 0 20px 0;
-        width: 300px;
+        width: 285px;
     }
 }
 
 @media(max-width: 420px) { 
-    
-    #popup{
-      
+    body {
+        font-size: 16px;
     }
+    
+    
     form {
         width: 360px !important;
         min-width: none !important; 
@@ -547,13 +549,16 @@ footer {
     .rc-anchor-normal {
         width: 285px;
     }
-    iframe {
-        width: 360px;
-    }
+    
     div.input-wrap {
         width: 300px;
     }
-
+    #popup,
+    iframe{
+        left: 0;
+        background-color: black;
+        width: 100%;
+    } 
     .proven-info {
         width: 200px;
     }
@@ -567,17 +572,36 @@ footer {
         width: 320px;
     }
     .btn {
-        margin: 0 10px 30px;
+        display: block;
+        margin: 0 auto 30px;
     }
     .ilon__info{
         padding-left: 10px;
      }
      .qr-code {
-         position: absolute;
-         left: 70px;
-         top: 330px;
+        margin: 0 auto;
      }
-     .wrapper {
-         height: 5550px;
-     }
+     /* .wrapper {
+         height: 5560px;
+     } */
+    
+}
+
+@media(max-width: 321px) { 
+    p {
+        width: 239px;
+        padding-right: 5px;
+    }
+    .proven-info {
+        width: 180px;
+    }
+    
+    .actions p {
+        width: 280px;
+    }
+    iframe, 
+    #popup {
+               height: 565px;
+    }
+    
 }
